<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/gray">

    <RelativeLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="438dp"
        android:background="@drawable/background_gradient">

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/menu"
            android:background="@color/transparente"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="27dp"/>

        <TextView
            android:id="@+id/titulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="45dp"
            android:fontFamily="@font/roboto_medium"
            android:letterSpacing="0.13"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="12sp" />
        <TextView
            android:id="@+id/forgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textSize="36sp"
            android:textColor="@color/white"
            android:fontFamily="@font/roboto_light"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/titulo"
            android:layout_marginTop="142dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/material_design"
            android:fontFamily="@font/roboto_light"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:layout_below="@id/forgotPassword"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"/>
    </RelativeLayout>

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_below="@id/top"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="-28dp"
        android:background="@color/white"
        android:fontFamily="@font/roboto_light"
        android:hint="@string/email"
        android:paddingLeft="20dp"
        android:textColor="@color/strong_gray"
        android:textSize="12sp" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginHorizontal="40dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/email"
        android:layout_marginTop="10dp"
        android:background="@drawable/background_gradient"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:fontFamily="@font/roboto_medium"
        android:textSize="12sp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <TextView
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/have_an_account"
            android:textColor="@color/strong_gray"
            android:textSize="12sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account"
            android:fontFamily="@font/roboto_medium"
            android:textSize="12sp"
            android:textColor="@color/strong_gray"
            android:layout_below="@id/login"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="40dp"
            android:layout_marginTop="20dp"/>
    </RelativeLayout>

</RelativeLayout>